test/rbkt/Queries/zorba/parser/syntax-errors/unexpected-qname-01.xq
(:
  Syntax error with an improved error message:
  unexpected QName
:)
    
for sm1 in (1,3)
return $sm1
